--- a/index.html
+++ b/index.html
@@ -3,10 +3,154 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Navkar Library</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
-   
+         <div id="navbar">
+        <ul>
+            <li style="float:left;color:white;" class="logo">Navkar Library</li>
+            <li><a href="#logout" class="right">Logout</a></li>
+            <li><a href="#contact" class="right">Contact Us</a></li>
+            <li><a href="#section-2" class="right">Register</a></li>
+            <li><a href="#section-1" class="right">Books</a></li>
+          </ul>
+        </div>
+          <br><br>
+
+        <div id="section-1">
+            <table>
+                <caption style="text-align: left;"><h1>Books</h1></caption>
+                <tr>
+                    <th>Book ID</th>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Genre</th>
+                    <th>Availability</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>
+                        <table>
+                            <caption><a href="#">The Hunger Games</a></caption>
+                            <tr>
+                                <td>Publication Date:2008</td>
+                            </tr>
+                            <tr>
+                                <td>Page Count:374</td>
+                            </tr>
+                            <tr>
+                                <td>ISBN:978-0439023481</td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td>Suzanne Collins</td>
+                    <td>Young Adult, Science Fiction</td>
+                    <td>Available</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>
+                        <table>
+                            <caption><a href="#">The Da Vinci Code</a></caption>
+                            <tr>
+                                <td>Publication Date:2003</td>
+                            </tr>
+                            <tr>
+                                <td>Page Count:454</td>
+                            </tr>
+                            <tr>
+                                <td>ISBN:978-0307474278</td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td>Dan Brown</td>
+                    <td>Mystery, Thriller</td>
+                    <td>Available</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>
+                        <table>
+                            <caption><a href="#">The Alchemist</a></caption>
+                            <tr>
+                                <td>Publication Date:1988</td>
+                            </tr>
+                            <tr>
+                                <td>Page Count:208</td>
+                            </tr>
+                            <tr>
+                                <td>ISBN:978-0061122415</td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td>Paulo Coelho</td>
+                    <td>Fiction, Self-help</td>
+                    <td>Not Available</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>
+                        <table>
+                            <caption><a href="#">Gone Girl</a></caption>
+                            <tr>
+                                <td>Publication Date:2012</td>
+                            </tr>
+                            <tr>
+                                <td>Page Count:432</td>
+                            </tr>
+                            <tr>
+                                <td>ISBN:978-0307588371</td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td>Gillian Flynn</td>
+                    <td>Mystery, Thriller</td>
+                    <td>Available</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>
+                        <table>
+                            <caption><a href="#">Educated</a></caption>
+                            <tr>
+                                <td>Publication Date:2018</td>
+                            </tr>
+                            <tr>
+                                <td>Page Count:400</td>
+                            </tr>
+                            <tr>
+                                <td>ISBN:978-0399590504</td>
+                            </tr>
+                        </table>
+                    </td>
+                    <td>Tara Westover</td>
+                    <td>Memoir, Autobiography</td>
+                    <td>Available</td>
+                </tr>
+            </table>
+        </div>
+        <br><br><br><br>
+        <div id="section-2">
+        <form id="form-1" action="#" method="post">
+            <caption style="text-align: left;"><h1>Register</h1></caption>
+            <label for="firstname">First Name:</label><br>
+            <input type="text" id="firstname" placeholder="Enter your First Name" required><br>
+            <label for="lastname">Last Name:</label><br>
+            <input type="text" id="lastname" placeholder="Enter your Last Name" required><br>
+            <label for="email">Email:</label><br>
+            <input type="email" id="email" placeholder="Enter your Email" required><br>
+            <label for="dob">Date of birth:</label><br>
+            <input type="date" id="dob" required><br>
+            <label for="age">Age:</label><br>
+            <input type="number" id="age" placeholder="Enter Age" min="5" max="100" required><br>
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" placeholder="Enter Password" required><br>
+            <label for="cpassword">Confirm Password:</label><br>
+            <input type="password" id="cpassword" placeholder="Enter Confirm Password" required><br>
+            <button type="submit">Register</button>
+        </form>
+        </div>
 </body>
 </html>
